tests/spec/emit/snapshots/float32_parameter_and_return.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn accept_float32(x: float32) -> float32 {
    x
  }
---
package main

func acceptFloat32(x float32) float32 {
	return x
}
