tests/spec/emit/snapshots/float_binding_from_block_keeps_var_declaration.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> float64 {
    let scaled: float64 = { 42 }
    scaled
  }
---
package main

func test() float64 {
	var scaled float64
	scaled = 42
	return scaled
}
