tests/spec/emit/snapshots/float_literal.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  3.14\n}\n"
---
package main

func test() {}
