tests/spec/emit/snapshots/float_scientific.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> float64 {
    1.5e10
  }
---
package main

func test() float64 {
	return 1.5e10
}
