tests/spec/emit/snapshots/float_scientific_negative_exponent.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> float64 {
    3.14e-5
  }
---
package main

func test() float64 {
	return 3.14e-5
}
