tests/spec/emit/snapshots/float_whole_number.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() {
    2.0
  }
---
package main

func test() {}
