tests/spec/emit/snapshots/fmt_println_does_not_collapse_concatenated_format_strings.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test(a: int, b: int) {
    fmt.Println(f"a={a}" + f" b={b}")
  }
---
package main

import "fmt"

func test(a, b int) {
	fmt.Println(fmt.Sprintf("a=%d", a) + fmt.Sprintf(" b=%d", b))
}
