tests/spec/emit/snapshots/fmt_println_does_not_collapse_concatenation_that_starts_with_sprintf.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn b() -> string { "b" }
  
  fn main() {
    fmt.Println(f"{fmt.Sprintf("%02d", 1)}{b()}")
  }
---
package main

import "fmt"

func b() string {
	return "b"
}

func main() {
	fmt.Println(fmt.Sprintf("%02d", 1) + b())
}
