tests/spec/emit/snapshots/fmt_println_does_not_collapse_multi_arg_sprint.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn test() {\n  fmt.Println(fmt.Sprint(\"a\", \"b\"))\n}\n"
---
package main

import "fmt"

func test() {
	fmt.Println(fmt.Sprint("a", "b"))
}
