tests/spec/emit/snapshots/fmt_println_does_not_collapse_sprintf_plus_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn suffix() -> string {
    "tail"
  }
  
  fn test() {
    fmt.Println(fmt.Sprintf("%d", 1) + suffix())
  }
---
package main

import "fmt"

func suffix() string {
	return "tail"
}

func test() {
	fmt.Println(fmt.Sprintf("%d", 1) + suffix())
}
